--- a/config/taxonomy.yaml
+++ b/config/taxonomy.yaml
@@ -10,18 +10,73 @@ sga_detail:
     - 운반비
     - 세금과공과
     - 대손상각비
+    - 총계
     - 기타판관비
   aliases:
     급여및상여: 급여
     임직원급여: 급여
     종업원급여: 급여
+    급여: 급여
+    급 여: 급여
+    인건비: 급여
+    인건비성급여: 급여
+    상여금: 급여
     퇴직급여충당부채전입액: 퇴직급여
+    퇴직급여전입액: 퇴직급여
+    퇴직급여비용: 퇴직급여
+    확정급여형퇴직급여: 퇴직급여
+    복리후생: 복리후생비
+    지급수수료및용역비: 지급수수료
+    판매수수료: 지급수수료
+    지급임차료및수수료: 지급수수료
+    광고선전비및판매활동촉진비: 광고선전비
+    판매촉진비: 광고선전비
+    해외시장개척비: 광고선전비
+    수출비: 광고선전비
+    운반보관비: 운반비
+    운송비: 운반비
+    운송보관비: 운반비
+    조세공과금: 세금과공과
+    세금과공과금: 세금과공과
+    대손비용: 대손상각비
+    대손충당금전입액: 대손상각비
+    판매비와관리비: 기타판관비
+    판매비: 기타판관비
+    관리비: 기타판관비
+    기타판매비와관리비: 기타판관비
+    연구비: 기타판관비
+    경상연구개발비: 기타판관비
+    경상개발비: 기타판관비
+    품질관리비: 기타판관비
+    서비스비: 기타판관비
+    소모품비: 기타판관비
+    소계: 총계
+    소 계: 총계
+    계: 총계
+    합계: 총계
+    합 계: 총계
     수선유지비: 기타판관비
 
 segment_revenue:
   standard_accounts:
     - 부문명
-  aliases: {}
+    - 합계
+    - 기타부문
+    - 차량부문
+  aliases:
+    합 계: 합계
+    총 계: 합계
+    소 계: 합계
+    내부거래제거: 합계
+    연결조정: 합계
+    기 타: 기타부문
+    기타 부문: 기타부문
+    기타: 기타부문
+    차량 부문: 차량부문
+    DX부문: DX 부문
+    DS부문: DS 부문
+    주요 제품: 주요제품
+    HARMAN: Harman
   note: "부문명은 회사별로 동적 생성"
 
 revenue_detail:
